--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,19 +31,20 @@
 
                 android:background="@mipmap/bg_duoyu"
                 android:layout_width="match_parent"
-                android:layout_height="350dp">
+                android:layout_height="250dp">
 
                 <LinearLayout
                     android:id="@+id/header_centerinfo"
-                    android:layout_centerInParent="true"
-                    android:layout_marginBottom="50dp"
-                    android:padding="25dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="40dp"
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
 
                     <TextView
+                        android:paddingBottom="0dp"
                         android:paddingLeft="70dp"
                         android:id="@+id/nowTem"
                         android:text="30°"
@@ -266,7 +267,7 @@
                 android:text="未 来 7 天"
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
-
+<!--
             <LinearLayout
                 android:orientation="vertical"
                 android:background="#fafafa"
@@ -327,7 +328,7 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </LinearLayout>-->
 
 
             <!--footer_bar-->
@@ -362,8 +363,8 @@
                             android:gravity="center"
                             style="@style/footer_text"
                             android:layout_gravity="center"
-                            android:text="aqi:30"
-                            android:id="@+id/footer_bar_aqi"
+                            android:text="PM2.5:7"
+                            android:id="@+id/footer_bar_pm25"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
 
@@ -451,8 +452,8 @@
                             android:gravity="center"
                             style="@style/footer_text"
                             android:layout_gravity="center"
-                            android:text="qlty:30"
-                            android:id="@+id/footer_bar_qlty"
+                            android:text="PM10:10"
+                            android:id="@+id/footer_bar_PM10"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
 
