--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -256,79 +256,6 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/body_more"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:padding="3dp"
-                android:textColor="#444444"
-                android:background="#ffffff"
-                android:layout_marginTop="5dp"
-                android:text="未 来 7 天"
-                android:layout_width="match_parent"
-                android:layout_height="40dp" />
-<!--
-            <LinearLayout
-                android:orientation="vertical"
-                android:background="#fafafa"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        style="@style/footer_title"
-                        android:text="空气质量:   "
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/footer_kongqizhiliang"
-                        android:textColor="#44ff44"
-                        style="@style/footer_title"
-                        android:text="优"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-                <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    style="@style/footer_title"
-                    android:text="PM2.5:        "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/footer_pm25"
-                    android:textColor="#44ff44"
-                    style="@style/footer_title"
-                    android:text="7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        style="@style/footer_title"
-                        android:text="P10:            "
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/footer_pm10"
-                        android:textColor="#44ff44"
-                        style="@style/footer_title"
-                        android:text="10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-            </LinearLayout>-->
 
 
             <!--footer_bar-->
@@ -355,7 +282,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/daxue"
+                            android:src="@mipmap/pm25"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -382,7 +309,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/yintian"
+                            android:src="@mipmap/no2"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -390,7 +317,7 @@
                             android:gravity="center"
                             style="@style/footer_text"
                             android:layout_gravity="center"
-                            android:text="no2:10"
+                            android:text="no2"
                             android:id="@+id/footer_bar_no2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -409,7 +336,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/qingtian"
+                            android:src="@mipmap/co"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -444,7 +371,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/duoyun"
+                            android:src="@mipmap/pm10"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -471,7 +398,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/leizhenyu"
+                            android:src="@mipmap/so2"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -498,7 +425,7 @@
 
                         <ImageView
                             android:layout_gravity="center"
-                            android:src="@mipmap/daxue"
+                            android:src="@mipmap/o3"
                             android:layout_width="55dp"
                             android:layout_height="55dp" />
 
@@ -523,7 +450,7 @@
 
             </LinearLayout>
 
-<!--
+
 
             <LinearLayout
                 android:layout_marginTop="5dp"
@@ -701,7 +628,6 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
--->
 
 
             <!--
@@ -743,6 +669,15 @@
 
 
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src=""/>
         </LinearLayout>
 
 
